--- a/Styles/index.css
+++ b/Styles/index.css
@@ -5,11 +5,12 @@
     font-family: jost;
 }
 
-
+/* ---------- */
 .header_container{
     width: 100%;
     height: 100px;
     margin-top: 40px;
+    z-index: 100;
 }
 .header_title{
     margin-left: 136px;
@@ -65,7 +66,7 @@
     width: 0;
     height: 2px;
     background-color: #189a46;
-    /* color: #189a46 !important; */
+    color: #189a46 !important;
     bottom: 4px;
     left: 0;
     transition: width color 0.5s;
@@ -74,4 +75,17 @@
     width: 100%;
     color: #189a46 !important;
     transition: all 0.5s;
+}
+/* .nav-item a:hover{
+    color: #189a46 !important;
+    transition: color 0.5s;
+} */
+.navbar-nav li.nav-item a{
+    display: inline-block;
+    color: #fff;
+    transition: color 0.5s;
+}
+.navbar-nav li.nav-item a:hover{
+    color: #189a46;
+    transition: color 0.5s;
 }
