--- a/Styles/index.css
+++ b/Styles/index.css
@@ -1,52 +1,62 @@
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
     font-family: jost;
 }
 
-/* ---------- */
-.header_container{
+/* -----------------HEADER---------------------------------*/
+
+
+
+
+.header_container {
     width: 100%;
     height: 100px;
     margin-top: 40px;
-    z-index: 100;
+    position: fixed;
 }
-.header_title{
+
+.header_title {
     margin-left: 136px;
     padding-top: 17px;
     font-size: 40px;
     font-weight: 600;
 }
-.header_menu{
+
+.header_menu {
     margin-left: 400px;
     margin-top: 20px;
 }
-.nav-link{
+
+.nav-link {
     /* margin-left: 18px; */
     /* text-align: center; */
     padding: 0 auto;
     /* width: 49px; */
     margin: auto 20px;
 }
+
 /* .nav_blog{
     margin-top: 3px;
     margin-left: -5px;
 } */
-.nav-item .nav-link i{
+.nav-item .nav-link i {
     font-size: 14px;
     margin-left: -3px;
 }
-.dropdown-menu{
+
+.dropdown-menu {
     width: 260px;
     height: 200px;
     border-radius: 6px !important;
     border: 0.5px solid white !important;
 }
+
 /* body{
     background-color: blueviolet !important;
 } */
-.dropdown-menu .dropdown-item{
+.dropdown-menu .dropdown-item {
     /* margin-left: 7px; */
     margin-left: 20px;
     padding-left: 0;
@@ -54,13 +64,15 @@
     width: 143px;
     margin-bottom: 17px;
 }
-.nav-item a{
+
+.nav-item a {
     position: relative !important;
     display: inline-block !important;
     /* border: 1px solid red; */
     /* text-align: left !important; */
 }
-.nav-item a::after{
+
+.nav-item a::after {
     position: absolute !important;
     content: '';
     width: 0;
@@ -71,21 +83,72 @@
     left: 0;
     transition: width color 0.5s;
 }
-.nav-item a:hover::after{
+
+.nav-item a:hover::after {
     width: 100%;
     color: #189a46 !important;
     transition: all 0.5s;
 }
+
 /* .nav-item a:hover{
     color: #189a46 !important;
     transition: color 0.5s;
 } */
-.navbar-nav li.nav-item a{
+.navbar-nav li.nav-item a {
     display: inline-block;
     color: #fff;
     transition: color 0.5s;
 }
-.navbar-nav li.nav-item a:hover{
+
+.navbar-nav li.nav-item a:hover {
     color: #189a46;
     transition: color 0.5s;
 }
+
+.background-container{
+    animation: change infinite 60s;
+    background-size: cover;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    min-height: 100vh;
+}
+@keyframes change{
+    
+    0%,100%{
+        background-image: url(/image/banner1.jpg);
+    }
+    25%{
+        background-image: url(/image/banner2.jpg);
+    }
+    50%{
+        background-image: url(/image/banner3.jpg);
+    }
+    75%{
+        background-image: url(/image/banner4.jpg);
+    }
+
+}
+.background-small-container{
+    position: absolute;
+    background-color: rgba(0,0,0,0.3);
+    width: 100%;
+    min-height: 100vh;
+    top: 0;
+    left: 0;
+}
+
+/* ---------------------CAROUSEL--------------------------- */
+/* .header {
+    background-image:
+    url(/image/banner1.jpg,), 
+    url(/image/banner2.jpg),
+    url(/image/banner3.jpg), 
+    url(/image/banner4.jpg);
+    width: 100%;
+    min-height: 900px;
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+} */
