--- a/Styles/index.css
+++ b/Styles/index.css
@@ -15,6 +15,7 @@
     height: 100px;
     margin-top: 40px;
     position: fixed;
+    z-index: 1;
 }
 
 .header_title {
@@ -140,15 +141,50 @@
 }
 
 /* ---------------------CAROUSEL--------------------------- */
-/* .header {
-    background-image:
-    url(/image/banner1.jpg,), 
-    url(/image/banner2.jpg),
-    url(/image/banner3.jpg), 
-    url(/image/banner4.jpg);
+.carousel-item{
+    background-color: rgba(0,0,0,0.3);
     width: 100%;
-    min-height: 900px;
-    background-size: cover;
-    background-position: center center;
-    background-repeat: no-repeat;
-} */
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+.carousel{
+    position: relative;
+}
+.carousel::after{
+    content: '';
+    top: 0;
+    left: 0;
+    position: absolute;
+    background-color: rgba(0,0,0,0.5);
+    width: 100%;
+    height: 100%;
+}
+.carousel-caption span a{
+    background-color: #fff;
+    width: 200px;
+    height: 70px;
+    font-weight: 500;
+    border-radius: 10px;
+    text-align: center;
+    padding-top: 10px;
+    /* display: inline-block; */
+} 
+.carousel-caption .contact-us a{
+    width: 200px !important;
+    height: 70px !important;
+    border: 1px solid white !important;
+    display: inline-block;
+    border-radius: 10px !important;
+    text-align: center !important;
+    padding-top: 10px !important;
+}
+.carousel-caption .read-more,.contact-us{
+    float: left;
+    width: 20%;
+}
+.carousel-item{
+    /* margin-bottom: 100px; */
+    border: 1px solid red !important;
+}
