--- a/Styles/index.css
+++ b/Styles/index.css
@@ -5,186 +5,4 @@
     font-family: jost;
 }
 
-/* -----------------HEADER---------------------------------*/
-
-
-
-
-.header_container {
-    width: 100%;
-    height: 100px;
-    margin-top: 40px;
-    position: fixed;
-    z-index: 1;
-}
-
-.header_title {
-    margin-left: 136px;
-    padding-top: 17px;
-    font-size: 40px;
-    font-weight: 600;
-}
-
-.header_menu {
-    margin-left: 400px;
-    margin-top: 20px;
-}
-
-.nav-link {
-    /* margin-left: 18px; */
-    /* text-align: center; */
-    padding: 0 auto;
-    /* width: 49px; */
-    margin: auto 20px;
-}
-
-/* .nav_blog{
-    margin-top: 3px;
-    margin-left: -5px;
-} */
-.nav-item .nav-link i {
-    font-size: 14px;
-    margin-left: -3px;
-}
-
-.dropdown-menu {
-    width: 260px;
-    height: 200px;
-    border-radius: 6px !important;
-    border: 0.5px solid white !important;
-}
-
-/* body{
-    background-color: blueviolet !important;
-} */
-.dropdown-menu .dropdown-item {
-    /* margin-left: 7px; */
-    margin-left: 20px;
-    padding-left: 0;
-    /* border: 1px solid red; */
-    width: 143px;
-    margin-bottom: 17px;
-}
-
-.nav-item a {
-    position: relative !important;
-    display: inline-block !important;
-    /* border: 1px solid red; */
-    /* text-align: left !important; */
-}
-
-.nav-item a::after {
-    position: absolute !important;
-    content: '';
-    width: 0;
-    height: 2px;
-    background-color: #189a46;
-    color: #189a46 !important;
-    bottom: 4px;
-    left: 0;
-    transition: width color 0.5s;
-}
-
-.nav-item a:hover::after {
-    width: 100%;
-    color: #189a46 !important;
-    transition: all 0.5s;
-}
-
-/* .nav-item a:hover{
-    color: #189a46 !important;
-    transition: color 0.5s;
-} */
-.navbar-nav li.nav-item a {
-    display: inline-block;
-    color: #fff;
-    transition: color 0.5s;
-}
-
-.navbar-nav li.nav-item a:hover {
-    color: #189a46;
-    transition: color 0.5s;
-}
-
-.background-container{
-    animation: change infinite 60s;
-    background-size: cover;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    min-height: 100vh;
-}
-@keyframes change{
-    
-    0%,100%{
-        background-image: url(/image/banner1.jpg);
-    }
-    25%{
-        background-image: url(/image/banner2.jpg);
-    }
-    50%{
-        background-image: url(/image/banner3.jpg);
-    }
-    75%{
-        background-image: url(/image/banner4.jpg);
-    }
-
-}
-.background-small-container{
-    position: absolute;
-    background-color: rgba(0,0,0,0.3);
-    width: 100%;
-    min-height: 100vh;
-    top: 0;
-    left: 0;
-}
-
-/* ---------------------CAROUSEL--------------------------- */
-.carousel-item{
-    background-color: rgba(0,0,0,0.3);
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-}
-.carousel{
-    position: relative;
-}
-.carousel::after{
-    content: '';
-    top: 0;
-    left: 0;
-    position: absolute;
-    background-color: rgba(0,0,0,0.5);
-    width: 100%;
-    height: 100%;
-}
-.carousel-caption span a{
-    background-color: #fff;
-    width: 200px;
-    height: 70px;
-    font-weight: 500;
-    border-radius: 10px;
-    text-align: center;
-    padding-top: 10px;
-    /* display: inline-block; */
-} 
-.carousel-caption .contact-us a{
-    width: 200px !important;
-    height: 70px !important;
-    border: 1px solid white !important;
-    display: inline-block;
-    border-radius: 10px !important;
-    text-align: center !important;
-    padding-top: 10px !important;
-}
-.carousel-caption .read-more,.contact-us{
-    float: left;
-    width: 20%;
-}
-.carousel-item{
-    /* margin-bottom: 100px; */
-    border: 1px solid red !important;
-}
+/* -------------CSS LÊ ĐÌNH HUY---------------- */
