--- a/Styles/index.css
+++ b/Styles/index.css
@@ -39,6 +39,11 @@
   margin-right: -20px;
 }
 
+.border-card {
+  box-shadow: 0 10px 30px 0 rgb(17 17 17 / 9%) !important;
+  z-index: 1;
+}
+
 .cl-b {
   color: #000c04 !important;
 }
@@ -163,6 +168,8 @@
     margin-right: auto;
     margin-left: auto;
   }
+
+
 
 }
 
@@ -376,6 +383,23 @@ header {
   transition: all 0.5s;
 }
 
+.drop-menu {
+  position: relative;
+}
+
+.drop-menu a {
+  text-decoration: none;
+}
+
+.item::after {
+  content: '';
+  width: 0;
+  height: 1.5px;
+  background: #189a46;
+  display: block;
+  transition: all 0.5s;
+}
+
 #poochNavbar .nav-link {
   color: #000;
 }
@@ -386,6 +410,38 @@ header {
 }
 
 #poochNavbar .nav-link:hover {
+  color: #189a46;
+}
+
+.navbar .collapse .navbar-nav .nav-item-drop:hover .drop-menu {
+  visibility: visible;
+  top: 60px;
+}
+
+.navbar .collapse .navbar-nav .nav-item-drop .drop-menu {
+  position: absolute;
+  height: 200px;
+  width: 230px;
+  border-radius: 12px;
+  padding: 2px 70px 35px 25px;
+  visibility: hidden;
+  top: 60px;
+  transition: 0.2s;
+  z-index: 1;
+  background-color: azure;
+}
+.navbar .collapse .navbar-nav .nav-item-drop .drop-menu p{
+  color: #000;
+}
+.navbar .collapse .navbar-nav .nav-item-drop .drop-menu a{
+  text-align: left;
+}
+
+.item:hover::after {
+  width: 100%;
+}
+
+.item::after:hover {
   color: #189a46;
 }
 
@@ -761,6 +817,15 @@ header {
   color: #ddd;
   margin: 15px 0;
   font-weight: 600;
+}
+
+.dark .navbar .collapse .navbar-nav .nav-item-drop .drop-menu{
+  background: #151414;
+  border: 1px solid #ddd;
+}
+
+.dark .navbar .collapse .navbar-nav .nav-item-drop .drop-menu p{
+  color:  #ddd;
 }
 
 
