--- a/Styles/index.css
+++ b/Styles/index.css
@@ -71,7 +71,7 @@ div#small-dialog iframe {
     opacity: 0;
 }
 
-.plan_icon{
+.plan_icon {
     font-size: 60px;
     /* border: 3px solid green; */
     width: 100px;
@@ -81,7 +81,7 @@ div#small-dialog iframe {
     padding-top: 20px;
     padding-left: 5px;
     border-radius: 50%;
-    background-color: rgba(0,0,0,.5);
+    background-color: rgba(0, 0, 0, .5);
     /* background-color: #fff;
     width: 100px;
     height: 100px;
@@ -89,7 +89,15 @@ div#small-dialog iframe {
     margin-top: 50px; */
     transition: 0.5s;
 }
-.plan_icon:hover{
+
+.plan_icon:hover {
     background-color: red;
     transition: all 0.5s;
+}
+
+/* CAROUSEL SLIDES */
+.carousel-indicators button{
+    width: 10px !important;
+    height: 10px !important;
+    border-radius: 50% !important;
 }
